--- a/index.html
+++ b/index.html
@@ -2919,7 +2919,7 @@
                                 <tr>
                                     <td style="width: 100px;"><img id="Brand1" style="width: 85px; height: 300px;" src="images/theme/brand1.png" /></td>
                                     <td style="width: 1040px;">
-                                        <p>&nbsp;Let's analyze this brand in the context of our friend Yoshitsune here:</p>
+                                        <p>Head</p>
                                         <ul>
                                             <li>114 HP (Equivalent to 11.4%)</li>
                                             <li>42 Mag DEF (Equivalent to 7.5%)</li>
@@ -2976,7 +2976,7 @@
                                 <tr>
                                     <td style="width: 100px;"><img id="Brand2" style="width: 85px; height: 300px;" src="images/theme/brand2.png" />&nbsp;</td>
                                     <td style="width: 1050px;">
-                                        <p>Let's analyze this brand in the context of our friend Yoshitsune here:</p>
+                                        <p>Right Arm</p>
                                         <ul>
                                             <li>25% Phys ATK = 186 Phys ATK</li>
                                             <li>42 HP (Equivalent to 4.2%)</li>
@@ -3041,7 +3041,7 @@
                                 <tr>
                                     <td style="width: 200px;"><img id="Brand3" style="width: 85px; height: 300px;" src="images/theme/brand3.png" /></td>
                                     <td style="width: 1040px;">
-                                        <p>Let's analyze this brand in the context of our friend Yoshitsune here:</p>
+                                        <p>Left Arm</p>
                                         <ul>
                                             <li>25% Phys ATK = 186 Phys ATK</li>
                                             <li>42 HP (Equivalent to 4.2%)</li>
@@ -3107,7 +3107,7 @@
                                 <tr>
                                     <td style="width: 100px;"><img id="Brand4" style="width: 85px; height: 300px;" src="images/theme/brand4.png" /></td>
                                     <td style="width: 1040px;">
-                                        <p>Let's analyze this brand in the context of our friend Yoshitsune here:</p>
+                                        <p>Body</p>
                                         <ul>
                                             <li>89 Phys DEF (Equivalent to 15%)</li>
                                             <li>42 Phys ATK (Equivalent to 5.5%)</li>
@@ -3152,7 +3152,7 @@
                                 <tr>
                                     <td style="width: 100px;"><img id="Brand5" style="width: 85px; height: 300px;" src="images/theme/brand5.png" /></td>
                                     <td style="width: 1040px;">&nbsp;
-                                        <p>Let's analyze this brand in the context of our friend Yoshitsune here:</p>
+                                        <p>Legs</p>
                                         <ul>
                                             <li>25% Phys ATK = 186 Phys ATK</li>
                                             <li>42 HP (Equivalent to 4.2%)</li>
