--- a/index.html
+++ b/index.html
@@ -2918,8 +2918,8 @@
                             <tbody>
                                 <tr>
                                     <td style="width: 100px;"><img id="Brand1" style="width: 85px; height: 300px;" src="images/theme/brand1.png" /></td>
-                                    <td style="width: 1040px;">
-                                        <p>Let's look at this Head brand's stats:</p>
+                                    <td style="width: 1040px;">&nbsp;
+                                        <p>&nbsp;Let's look at this Head brand's stats:</p>
                                         <ul>
                                             <li>114 HP (Equivalent to 11.4%)</li>
                                             <li>42 Mag DEF (Equivalent to 7.5%)</li>
@@ -2975,8 +2975,8 @@
                                 </tr>
                                 <tr>
                                     <td style="width: 100px;"><img id="Brand2" style="width: 85px; height: 300px;" src="images/theme/brand2.png" />&nbsp;</td>
-                                    <td style="width: 1050px;">
-                                        <p>Let's look at this Right Arm brand's stats:</p>
+                                    <td style="width: 1050px;">&nbsp;
+                                        <p>&nbsp;Let's look at this Right Arm brand's stats:</p>
                                         <ul>
                                             <li>25% Phys ATK = 186 Phys ATK</li>
                                             <li>42 HP (Equivalent to 4.2%)</li>
@@ -3040,8 +3040,8 @@
                                 </tr>
                                 <tr>
                                     <td style="width: 200px;"><img id="Brand3" style="width: 85px; height: 300px;" src="images/theme/brand3.png" /></td>
-                                    <td style="width: 1040px;">
-                                        <p>Let's look at this Left Arm brand's stats:</p>
+                                    <td style="width: 1040px;">&nbsp;
+                                        <p>&nbsp;Let's look at this Left Arm brand's stats:</p>
                                         <ul>
                                             <li>25% Phys ATK = 186 Phys ATK</li>
                                             <li>42 HP (Equivalent to 4.2%)</li>
@@ -3106,8 +3106,8 @@
                                 </tr>
                                 <tr>
                                     <td style="width: 100px;"><img id="Brand4" style="width: 85px; height: 300px;" src="images/theme/brand4.png" /></td>
-                                    <td style="width: 1040px;">
-                                        <p>Let's look at this Body brand's stats:</p>
+                                    <td style="width: 1040px;">&nbsp;
+                                        <p>&nbsp;Let's look at this Body brand's stats:</p>
                                         <ul>
                                             <li>89 Phys DEF (Equivalent to 15%)</li>
                                             <li>42 Phys ATK (Equivalent to 5.5%)</li>
@@ -3152,7 +3152,7 @@
                                 <tr>
                                     <td style="width: 100px;"><img id="Brand5" style="width: 85px; height: 300px;" src="images/theme/brand5.png" /></td>
                                     <td style="width: 1040px;">&nbsp;
-                                        <p>Let's look at this Leg brand's stats:</p>
+                                        <p>&nbsp;Let's look at this Leg brand's stats:</p>
                                         <ul>
                                             <li>25% Phys ATK = 186 Phys ATK</li>
                                             <li>42 HP (Equivalent to 4.2%)</li>
