--- a/index.html
+++ b/index.html
@@ -2919,7 +2919,7 @@
                                 <tr>
                                     <td style="width: 100px;"><img id="Brand1" style="width: 85px; height: 300px;" src="images/theme/brand1.png" /></td>
                                     <td style="width: 1040px;">&nbsp;
-                                        <p>&nbsp;Let's look at this Head brand's stats:</p>
+                                        <p>&nbsp;&nbsp;Let's look at this Head brand's stats:</p>
                                         <ul>
                                             <li>114 HP (Equivalent to 11.4%)</li>
                                             <li>42 Mag DEF (Equivalent to 7.5%)</li>
@@ -2927,7 +2927,7 @@
                                             <li>7% Phys AC</li>
                                             <li>2% Critical</li>
                                         </ul>
-                                        <p><strong>&nbsp;Why is this brand good?</strong></p>
+                                        <p><strong>&nbsp;&nbsp;Why is this brand good?</strong></p>
                                         <ul>
                                             <li><strong>It gets the 2 best stats for a Physical Attacker:</strong> Phys ATK
                                                 and Accuracy
@@ -2948,7 +2948,7 @@
                                             <li><strong>All 5 stats are usable:</strong> Mag DEF can even be considered a
                                                 focus stat if you have Hell Biker</li>
                                         </ul>
-                                        <p>&nbsp;<strong>How to improve from this brand?</strong></p>
+                                        <p>&nbsp;&nbsp;<strong>How to improve from this brand?</strong></p>
                                         <ul>
                                             <li>Honestly, not much you can change without being very lucky.</li>
                                             <li>Ideally, many people chase Phys ATK as a secondary for Head pieces
@@ -2959,7 +2959,7 @@
                                                 </ul>
                                             </li>
                                         </ul>
-                                        <p>&nbsp;<strong>General Rule of Thumb:</strong></p>
+                                        <p>&nbsp;&nbsp;<strong>General Rule of Thumb:</strong></p>
                                         <ul>
                                             <li>Get a usable secondary</li>
                                             <li>Get multiple focus stats</li>
@@ -2976,7 +2976,7 @@
                                 <tr>
                                     <td style="width: 100px;"><img id="Brand2" style="width: 85px; height: 300px;" src="images/theme/brand2.png" />&nbsp;</td>
                                     <td style="width: 1050px;">&nbsp;
-                                        <p>&nbsp;Let's look at this Right Arm brand's stats:</p>
+                                        <p>&nbsp;&nbsp;Let's look at this Right Arm brand's stats:</p>
                                         <ul>
                                             <li>25% Phys ATK = 186 Phys ATK</li>
                                             <li>42 HP (Equivalent to 4.2%)</li>
@@ -2984,7 +2984,7 @@
                                             <li>22 Phys DEF (Equivalent to 3.72%)</li>
                                             <li>3% Ailment Resist</li>
                                         </ul>
-                                        <p><strong>&nbsp;Why is this brand good?</strong></p>
+                                        <p><strong>&nbsp;&nbsp;Why is this brand good?</strong></p>
                                         <ul>
                                             <li><strong>Massive gains for Phys ATK</strong>
                                                 <ul>
@@ -2999,7 +2999,7 @@
                                             <li><strong>All 5 stats are usable:</strong> Ailment resist is okay, but at
                                                 least it helps you after the barrier is broken.</li>
                                         </ul>
-                                        <p>&nbsp;<strong>How to improve from this brand?</strong></p>
+                                        <p>&nbsp;&nbsp;<strong>How to improve from this brand?</strong></p>
                                         <ul>
                                             <li>This is where we start nitpicking</li>
                                             <li>Ideally I'd want as much Accuracy as I can get.
@@ -3023,7 +3023,7 @@
                                                 </ul>
                                             </li>
                                         </ul>
-                                        <p>&nbsp;<strong>General Rule of Thumb:</strong></p>
+                                        <p>&nbsp;&nbsp;<strong>General Rule of Thumb:</strong></p>
                                         <ul>
                                             <li>ALWAYS get percentage Phys ATK for phys attackers
                                                 <ul>
@@ -3041,7 +3041,7 @@
                                 <tr>
                                     <td style="width: 200px;"><img id="Brand3" style="width: 85px; height: 300px;" src="images/theme/brand3.png" /></td>
                                     <td style="width: 1040px;">&nbsp;
-                                        <p>&nbsp;Let's look at this Left Arm brand's stats:</p>
+                                        <p>&nbsp;&nbsp;Let's look at this Left Arm brand's stats:</p>
                                         <ul>
                                             <li>25% Phys ATK = 186 Phys ATK</li>
                                             <li>42 HP (Equivalent to 4.2%)</li>
@@ -3049,7 +3049,7 @@
                                             <li>32 Phys ATK (Equivalent to 4.32%)</li>
                                             <li>23 Mag DEF (Equivalent to 4.1%)</li>
                                         </ul>
-                                        <p><strong>&nbsp;Why is this brand good?</strong></p>
+                                        <p><strong>&nbsp;&nbsp;Why is this brand good?</strong></p>
                                         <ul>
                                             <li><strong>Massive gains for Phys ATK</strong>
                                                 <ul>
@@ -3064,7 +3064,7 @@
                                                 Phys ATK twice</li>
                                             <li><strong>All 5 stats are usable</strong></li>
                                         </ul>
-                                        <p><strong>&nbsp;How to improve from this brand?</strong></p>
+                                        <p><strong>&nbsp;&nbsp;How to improve from this brand?</strong></p>
                                         <ul>
                                             <li>This is where we start nitpicking</li>
                                             <li>Ideally I'd want as much Accuracy as I can get.
@@ -3089,7 +3089,7 @@
                                                 </ul>
                                             </li>
                                         </ul>
-                                        <p><strong>&nbsp;General Rule of Thumb:</strong></p>
+                                        <p><strong>&nbsp;&nbsp;General Rule of Thumb:</strong></p>
                                         <ul>
                                             <li>ALWAYS get percentage Phys ATK for phys attackers
                                                 <ul>
@@ -3107,7 +3107,7 @@
                                 <tr>
                                     <td style="width: 100px;"><img id="Brand4" style="width: 85px; height: 300px;" src="images/theme/brand4.png" /></td>
                                     <td style="width: 1040px;">&nbsp;
-                                        <p>&nbsp;Let's look at this Body brand's stats:</p>
+                                        <p>&nbsp;&nbsp;Let's look at this Body brand's stats:</p>
                                         <ul>
                                             <li>89 Phys DEF (Equivalent to 15%)</li>
                                             <li>42 Phys ATK (Equivalent to 5.5%)</li>
@@ -3126,7 +3126,7 @@
                                                 (Boosted Tertiary), Hits Phys ATK twice</li>
                                             <li><strong>All 5 stats are usable</strong></li>
                                         </ul>
-                                        <p><strong>&nbsp;How to improve from this brand?</strong></p>
+                                        <p><strong>&nbsp;&nbsp;How to improve from this brand?</strong></p>
                                         <ul>
                                             <li>Ideally, I'd actually want Mag DEF as the primary stat.
                                                 <ul>
@@ -3139,7 +3139,7 @@
                                             <li>If we're nitpicking, we'd probably want Accuracy as a tertiary to replace
                                                 one of these three</li>
                                         </ul>
-                                        <p><strong>&nbsp;General Rule of Thumb:</strong></p>
+                                        <p><strong>&nbsp;&nbsp;General Rule of Thumb:</strong></p>
                                         <ul>
                                             <li>Get a usable secondary</li>
                                             <li>Get multiple focus stats covered</li>
@@ -3152,7 +3152,7 @@
                                 <tr>
                                     <td style="width: 100px;"><img id="Brand5" style="width: 85px; height: 300px;" src="images/theme/brand5.png" /></td>
                                     <td style="width: 1040px;">&nbsp;
-                                        <p>&nbsp;Let's look at this Leg brand's stats:</p>
+                                        <p>&nbsp;&nbsp;Let's look at this Leg brand's stats:</p>
                                         <ul>
                                             <li>25% Phys ATK = 186 Phys ATK</li>
                                             <li>42 HP (Equivalent to 4.2%)</li>
@@ -3160,7 +3160,7 @@
                                             <li>3% Ailment Resist</li>
                                             <li>8% Phys EV</li>
                                         </ul>
-                                        <p><strong>&nbsp;Why is this brand good?</strong></p>
+                                        <p><strong>&nbsp;&nbsp;Why is this brand good?</strong></p>
                                         <ul>
                                             <li><strong>It gets the 2 best stats for a Physical Attacker:</strong> Phys ATK
                                                 and Accuracy
@@ -3180,7 +3180,7 @@
                                             <li><strong>All 5 stats are usable: </strong>Ailment resist is okay, it'll at
                                                 least help when barriers are broken</li>
                                         </ul>
-                                        <p><strong>&nbsp;How to improve from this brand?</strong></p>
+                                        <p><strong>&nbsp;&nbsp;How to improve from this brand?</strong></p>
                                         <ul>
                                             <li>This is where we start nitpicking</li>
                                             <li>For secondary stats, I would've prefered either Phys ATK or Mag DEF
@@ -3190,7 +3190,7 @@
                                                 </ul>
                                             </li>
                                         </ul>
-                                        <p><strong>&nbsp;General Rule of Thumb:</strong></p>
+                                        <p><strong>&nbsp;&nbsp;General Rule of Thumb:</strong></p>
                                         <ul>
                                             <li>ALWAYS get percentage Phys ATK for phys attackers
                                                 <ul>
