--- a/index.html
+++ b/index.html
@@ -3257,7 +3257,7 @@
                                 <ul>
                                     <li>3 Brands with Phys ATK % primaries</li>
                                     <li>Decent, usable tertiaries that cover focus stats (Especially Accuracy)</li>
-                                    <li><strong>To improve:</strong> Mag DEF on the low end, maybe could use more Accuracy</li>
+                                    <li><strong>To improve:</strong> Mag DEF is on the low end, and maybe Yoshi could use more Accuracy</li>
                                 </ul>
                             </li>
                         </ul>
