--- a/index.html
+++ b/index.html
@@ -3115,7 +3115,7 @@
                                             <li>4% HP = 40 HP</li>
                                             <li>3% Phys ATK = 22.8 Phys ATK</li>
                                         </ul>
-                                        <p><strong>&nbsp;Why is this brand good?</strong></p>
+                                        <p><strong>&nbsp;&nbsp;Why is this brand good?</strong></p>
                                         <ul>
                                             <li><strong>Sizable boost to Phys ATK</strong>
                                                 <ul>
