--- a/index.html
+++ b/index.html
@@ -3244,7 +3244,7 @@
                                         a total of 1638.5 Phys ATK.
                                         <ul>
                                             <li>The game seems to round this up to 1640, which means that there seems to be
-                                                a hidden float value for each up.</li>
+                                                a hidden float value for each stat.</li>
                                             <li>My guess is that Yoshi doesn't have just 745 PATK, but rather 745.5 or
                                                 something.</li>
                                         </ul>
