--- a/index.html
+++ b/index.html
@@ -3025,8 +3025,9 @@
                             of the percentage stats.
                             <ul>
                                 <li>Brands at level 1 could start with 0, 1, 2 or 3 tertiaries.</li>
-                                <li>Flat tertiaries start from anywhere from 1-25 at level 1, and can boost up to 40 points</li>
-                                <li>Percentage tertiaries start from anywhere from 1-4% at level 1, and can boost up to 15%</li>
+                                <li>Flat tertiaries start from anywhere from 1-25 at level 1, and can boost up to 50 points</li>
+                                <li>Percentage tertiaries start from anywhere from 1-4% at level 1, and can boost up to 20%</li>
+                                <li>Tertiaries cannot be the EXACT same as the primary stat, so if the primary stat is a Phys ATK % for example, a tertiary for that brand will not be Phys ATK %</li>
                                 <li>Aim for brands starting with 1 or 2 decent tertiaries. (1 for usable brands, 2 for
                                     possibly OP brands)</li>
                                 <li>6★ Brands starting with 3 tertiaries are unicorns (rare). Don't feel the need to
