Demon Guide: Updated clickable links for gacha demons

--- a/index.html
+++ b/index.html
@@ -406,12 +406,12 @@
                     <tr><td class="DG-Table-Label" colspan="7">Notable Demons (WIP)</td></tr>
                     <tr>
                       <td class="DG-Table-Label">Gacha</td>
-                      <td><a href="#Chernobog"><img src="images/devil/Chernobog.png"><br>Chernobog</a></td>
-                      <td><a href="#Hel"><img src="images/devil/Hel.jpg"><br>Hel</a></td>
-                      <td><a href="#HellBiker"><img src="images/devil/Hell-Biker.png"><br>Hell Biker</a></td>
-                      <td><a href="#JeanneDArc"><img src="images/devil/eiyuu_jannu.png"><br>Jeanne D'Arc</a></td>
-                      <td><a href="#Persephone"><img src="images/devil/Persephone.jpg"><br>Persephone</a></td>
-                      <td><a href="#WhiteRider"><img src="images/devil/majin_waitonaito.png"><br>White Rider</a></td>
+                      <td><a href="#Chernobog" onclick="openCollapsibleViaToC('Chernobog')"><img src="images/devil/Chernobog.png"><br>Chernobog</a></td>
+                      <td><a href="#Hel" onclick="openCollapsibleViaToC('Hel')"><img src="images/devil/Hel.jpg"><br>Hel</a></td>
+                      <td><a href="#HellBiker" onclick="openCollapsibleViaToC('HellBiker')"><img src="images/devil/Hell-Biker.png"><br>Hell Biker</a></td>
+                      <td><a href="#JeanneDArc" onclick="openCollapsibleViaToC('JeanneDArc')"><img src="images/devil/eiyuu_jannu.png"><br>Jeanne D'Arc</a></td>
+                      <td><a href="#Persephone" onclick="openCollapsibleViaToC('Persephone')"><img src="images/devil/Persephone.jpg"><br>Persephone</a></td>
+                      <td><a href="#WhiteRider" onclick="openCollapsibleViaToC('WhiteRider')"><img src="images/devil/majin_waitonaito.png"><br>White Rider</a></td>
                     </tr>
                     <tr>
                       <td class="DG-Table-Label" rowspan = "2">4★</td>
