Demon Guide: Spelling

--- a/index.html
+++ b/index.html
@@ -3075,7 +3075,7 @@
                   <p><strong><a href="javascript:void(0)" @click="show_guide_devil('King Frost')">Demon Information</a></strong></p>
                   <p>Slow tanky caster, hee comes with the unique skill Cold World (CW), a aoe ice attack with an added Rakunda effect if all targets are hit.
                     Ice boost ramps up this damage, whilst his last skill Megaton Press doesn't really do much. With King Frost hee hoever works best when there are no
-                    opponents who ndr ice. You'd have to be very selective whenever you use him. He's great for pve, but not so good in pvp due to ice weakness being covered 
+                    opponents who ndr ice. You'd have to be very selective whenever you use him. Hee's great for pve, but not so good in pvp due to ice weakness being covered 
                     most of the time.
                   </p>
 
@@ -3121,7 +3121,7 @@
                   <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Loki')">Demon Information</a></strong></p>
                   <p>Slow single target oriented mage with great HP/Vit stats for survivability. Loki is a Trickster, his unique passive granting a chance to ignore 
                      press turn usage when a weakness is hit. Naturally coming with Zandyne and Agidyne he's great for coverage and targeting weaknesses in content such as 
-                     AG Gatekeeper fights and pve in general. He is an effective counter to Orcus as damage reduction is only applied to multi-hit/aoe skills.
+                     AG Gatekeeper fights and pve in general. He is an effective counter to Orcus/Hecatoncheires as damage reduction is only applied to multi-hit/aoe skills.
                   </p>
 
                   <div class="DG-Table">
@@ -3136,7 +3136,7 @@
                             <td><b>Best<br>(Coverage)</b></td>
                           </tr>
                           <tr><td class="DG-PRO">Protector</td>
-                            <td>He has pretty good luck, but his main forte is not in ailment slinging with <b>Vengeance</b> (It's not that great anyways) but instead in single target spell damage</td>
+                            <td>He has pretty good luck, but his main forte is not in ailment slinging with <b>Vengeance</b> (It's not that great anyways) instead being in single target spell damage</td>
                             <td>Bad</td>
                           </tr>
                           <tr><td class="DG-PSY">Psychic</td>
