Demon Guide: Wording

--- a/index.html
+++ b/index.html
@@ -3380,7 +3380,7 @@
                       <tbody>
                           <tr><td class="DG-CMN">Common</td>
                             <td><b>Samarecarm</b> gives him support utility to revive your dead team members. Useful for AG farming in the cases where an ally gets killed by a foe, talk or someone failing 
-                              the Gatekeeper challenge.
+                              the Chaos Knight challenge.
                             </td>
                             <td>Usable</td>
                           </tr>
