--- a/index.html
+++ b/index.html
@@ -585,15 +585,15 @@
                     <p><a href="#DG-5StarDemons"><img class="DG-HomeButton" src="images/theme/HomeButton.png"></a></p>
                   </div>
 
-                  <!-- [Metatron] -->
+                  <!-- [Masakado] -->
                   <button id="Masakado" class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">Masakado</button>
                   <div class="DG-Demon"><br>
                     <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Masakado')">Demon Information (TODO) </a></strong></p>
                     <p>One of the most OP demons in the game, hats off to you if you've obtained him. He has no weaknesses: Null Phys, Resist Light, Drain Dark (He can't be killed by Alice), 
                        the highest strength in the game and really high luck (meaning he can easily crit, have high innate ailment resistance and infliction) and a really powerful 
                        base kit. Vorpal Blade for phys aoe, Warlord's Wrath: Givine phys pierce, 100% phys counter and Intimidating Stance all in one passive and Occult Flash: Single 
-                       target phys damage with 50% crit, 200 power and 100% kill rate. Yup even if you have Tetraja on your demon, odds are they'll die anyways from the heavy damage and crit. It 
-                       even has three uses as well. Since he's a intimidating stance user, it's best to pair him up with another stance user. I'd recommend Zhong Kui due to his Auto-Taruka having a huge 
+                       target phys damage with 50% crit, 200 power and 100% kill rate. Yup even if you have Tetraja on your demon, odds are they'll die anyways from the heavy damage and crit ( 
+                       even has three uses). Since he's a intimidating stance user, it's best to pair him up with another stance user. I'd recommend Zhong Kui due to his Auto-Taruka having a huge 
                        benefit for the both of them.
                     </p>
 
