Demon Guide: Added missing words to Masakado

--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                               <td><strong>Phys Amp</strong> skyrockets his already damage due to his strength stat, combine this with Phys Boost for maximum power.
                                 <br>If you do pair him with Zhong Kui, <strong>Auto-Taruka</strong> should be replaced given Zhong Kui already comes with it.
                               </td>
-                              <td><strong>Best</strong></td>
+                              <td><strong>Best<br>(Offensive)</strong></td>
                             </tr>
                             <tr><td class="DG-ELE">Elementalist</td>
                               <td><strong>Drain Phys</strong> when paired with Rama would prevent pierce phys sweeping (and getting one shotted by another Masakado). 
