--- a/index.html
+++ b/index.html
@@ -591,10 +591,9 @@
                     <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Masakado')">Demon Information (TODO) </a></strong></p>
                     <p>One of the most OP demons in the game, hats off to you if you've obtained him. He has no weaknesses: Null Phys, Resist Light, Drain Dark (He can't be killed by Alice), 
                        the highest strength in the game and really high luck (meaning he can easily crit, have high innate ailment resistance and infliction) and a really powerful 
-                       base kit. Vorpal Blade for phys aoe, Warlord's Wrath: Givine phys pierce, 100% phys counter and Intimidating Stance all in one passive and Occult Flash: Single 
-                       target phys damage with 50% crit, 200 power and 100% kill rate. Yup even if you have Tetraja on your demon, odds are they'll die anyways from the heavy damage and crit ( 
-                       even has three uses). Since he's a intimidating stance user, it's best to pair him up with another stance user. I'd recommend Zhong Kui due to his Auto-Taruka having a huge 
-                       benefit for the both of them.
+                       base kit. Vorpal Blade for phys aoe, Warlord's Wrath: Granting phys pierce, 100% phys counter and Intimidating Stance all in one passive and Occult Flash: Single 
+                       target phys damage with 50% crit, 200 power and 100% kill rate. Yup even if you have Tetraja on your demon, odds are they'll die anyways from the heavy damage and crit (even has three uses). 
+                       Since he's a intimidating stance user, it's best to pair him up with another stance user. I'd recommend Zhong Kui due to his Auto-Taruka having a huge benefit for the both of them.
                     </p>
 
                     <div class="DG-Table">
@@ -637,11 +636,11 @@
                     <p><strong>Recommended skills:</strong></p>
                     <ul>
                         <li>Endure/Enduring Soul. If he's alive and kicking, he'd remain a dangerous foe.</li>
-                        <li>Phys Boost/Amp(If not Purple). Increasing his already high damage is always good.</li>
+                        <li>Phys Boost/Amp. Increasing his already high damage is always good.</li>
                         <li>Good/Great Aim. Worried about his accuracy? this can help boost it.</li>
                         <li>Null Charm/Hellish/Infernal Mask. A charmed Masakado can be deadly to your team.</li>
                     </ul>
-                    <p><strong>Brands: </strong>Divine to two turn Vorpal Blade, Occult Flash. Life can ensure he stays alive and War if you want pure damage/use him for pve only.
+                    <p><strong>Brands: </strong> Divine to two turn Vorpal Blade, Occult Flash. Life can ensure he stays alive and War if you want pure damage/use him for pve only.
                       <br>For secondary, Ward should be gotten unless you run ailment resistance. If that's the case Aim can be good for accuracy, Shield/Guard for defenses.
                     </p>
                     <p><a href="#DG-5StarDemons"><img class="DG-HomeButton" src="images/theme/HomeButton.png"></a></p>
