Demon Guide: Masakado update
- Removed TODO

--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                   <!-- [Masakado] -->
                   <button id="Masakado" class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">Masakado</button>
                   <div class="DG-Demon"><br>
-                    <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Masakado')">Demon Information (TODO) </a></strong></p>
+                    <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Masakado')">Demon Information</a></strong></p>
                     <p>One of the most OP demons in the game, hats off to you if you've obtained him. He has no weaknesses: Null Phys, Resist Light, Drain Dark (He can't be killed by Alice), 
                        the highest strength in the game and really high luck (meaning he can easily crit, have high innate ailment resistance and infliction) and a really powerful 
                        base kit. Vorpal Blade for phys aoe, Warlord's Wrath: Granting phys pierce, 100% phys counter and Intimidating Stance all in one passive and Occult Flash: Single 
