Demon Guide: Ishtar Updated

--- a/index.html
+++ b/index.html
@@ -2214,7 +2214,7 @@
                         <li>Whatever you like if Teal, her base kit is technically good enough. You can go Endure for
                             survival or another element as well if you wish.</li>
                     </ul>
-                    <p><strong>Brands: </strong>Divine for Jack Bros setup with her Yellow version. Spell can work for Teal.</p>
+                    <p><strong>Brands: </strong>Divine for maximising mp regen (Mesopotamian Star is quite expensive). Spell can work for general pve.</p>
                     <p><a href="#DG-5StarDemons"><img class="DG-HomeButton" src="images/theme/HomeButton.png"></a></p>
                   </div>
                   
