Demon Guide: Small fix

--- a/index.html
+++ b/index.html
@@ -3072,7 +3072,7 @@
                 <!-- [Bodyconian] -->
                 <button id="Bodyconian" class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">Bodyconian</button>
                 <div class="DG-Demon"><br>
-                  <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Man Eater')">Demon Information</a></strong></p>
+                  <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Bodyconian')">Demon Information</a></strong></p>
                   <p>
                   </p>
 
